cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project ("UAV Locator")
find_package(OpenCV REQUIRED)
find_package(catkin REQUIRED COMPONENTS roscpp)
add_definitions(-DRELEASE -Werror -Wall -Wextra -pedantic -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wundef -Wno-unused -Wno-variadic-macros -Wno-parentheses -fdiagnostics-show-option)
#add_definitions(-DRelease)
add_executable(uav_locator main.cpp uav_locator.cpp)
include_directories(${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
target_link_libraries(uav_locator ${OpenCV_LIBS}  ${catkin_LIBRARIES})
set_property(TARGET uav_locator PROPERTY CXX_STANDARD 14)
set_property(TARGET uav_locator PROPERTY CXX_STANDARD_REQUIRED ON)
#set_property(TARGET uav_locator APPEND_STRING PROPERTY COMPILE_FLAGS -Wall )
